Grace/tests/gibbs/errors/t075.grace
// ERROR = P1029
if((6 * 9) == 42) then {
    print "So long and thanks for all the fish"
} elseif(true)
    print "I'm not a refrigerator"
}
